--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "b43b7156-1f82-42bf-bd8c-1a2aa57f6dd0",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "1f392d93-f96a-4130-87c8-1f55ad41235a",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "cbbc4ff7-e165-47f9-9fcd-41a0fae9697d",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "3d22bf47-e4fc-4e1f-9d57-08f129f81aab",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "c9ba2e38-0888-4443-8fdc-c0e340da35bf",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "cfb1da37-d270-467a-b97a-336bc8be625b",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "d100fdf1-a195-46eb-9285-ad3a05687139",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "c2f935ce-4560-4b98-b2cd-1922048dbff9",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "e0971698-fb68-4b5e-9cac-b2f295010372",
    "metadata": {},
    "outputs": [],
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "4aedf9d3-b719-497c-a77c-09ca6602f38d",
    "metadata": {},
    "outputs": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "cc8892a8-6ff1-424b-a319-7be6794a1412",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "34219f24-e36d-4c6c-a6b8-0223426f8502",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "2c6e39ab-7068-4a2b-8956-2953fe28961b",
    "metadata": {},
    "outputs": [],
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "6c776d9a-3ebf-4469-973d-b3500165800e",
    "metadata": {},
    "outputs": [
@@ -531,15 +531,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Données enregistrées dans 'transition_energetique_pays_2010_2023.csv'\n"
+      "Données pour l'année 2023 enregistrées dans 'transition_energetique_pays_2023.csv'\n"
      ]
     }
    ],
    "source": [
-    "# Enregistrer les données nettoyées et transformées dans un fichier CSV\n",
-    "df_combined.to_csv('transition_energetique_pays_2010_2023.csv', index=False)\n",
+    "# Filtrer les données pour ne garder que l'année 2023\n",
+    "df_combined_2023 = df_combined[df_combined['Année'] == '2023']\n",
     "\n",
-    "print(\"Données enregistrées dans 'transition_energetique_pays_2010_2023.csv'\")"
+    "# Enregistrer les données nettoyées et transformées dans un fichier CSV\n",
+    "df_combined_2023.to_csv('transition_energetique_pays_2023.csv', index=False)\n",
+    "\n",
+    "print(\"Données pour l'année 2023 enregistrées dans 'transition_energetique_pays_2023.csv'\")"
    ]
   }
  ],
