Mise à jour des fichiers ANOVA et Regression_Lineaire

--- a/Regression_Lineaire.ipynb
+++ b/Regression_Lineaire.ipynb
@@ -28,13 +28,13 @@
     "\n",
     "2. **Variables explicatives (indépendantes)** :  \n",
     "   - **PIB par habitant** (**NY.GDP.PCAP.CD**) : indicateur économique reflétant le niveau de développement économique d’un pays.  \n",
-    "   - **Investissements dans les énergies renouvelables** (**EG.ELC.RNWX.ZS**) : pourcentage du PIB investi dans les énergies renouvelables, reflétant les priorités politiques et économiques du pays.  \n",
+    "   - **Investissements dans les énergies renouvelables** (**EG.ELC.RNWX.ZS**) : pourcentage du PIB investi dans les énergies renouvelables.\n",
     "   - **Accès à l'électricité (% de la population)** (**EG.ELC.ACCS.ZS**) : Reflète le niveau d'infrastructure énergétique.  \n",
     "\n",
     "#### Objectifs de l'étude  \n",
     "1. **Analyser l'impact des variables explicatives** sur la proportion d'énergie renouvelable dans le mix énergétique.  \n",
     "2. **Quantifier l'effet de chaque facteur** pour déterminer les leviers les plus efficaces dans la transition énergétique.  \n",
-    "3. **Proposer des recommandations politiques** pour renforcer l'adoption des énergies renouvelables en s'appuyant sur des données quantitatives.  "
+    "3. **Proposer des recommandations politiques** pour renforcer l'adoption des énergies renouvelables."
    ]
   },
   {
@@ -605,13 +605,13 @@
     "\n",
     "2. **Coefficients des variables explicatives** :\n",
     "   - **Constante (const)** : 30.8770\n",
-    "     - En l'absence de variation des autres variables, le taux d'énergie renouvelable moyen est de **30,88 %**.\n",
-    "   - **x1 (PIB par habitant)** : -0.4482 (non significatif)\n",
-    "     - La relation entre le PIB par habitant et le taux d'énergie renouvelable est **faible et non statistiquement significative** (\\(p = 0.738\\)). Cette variable n'a pas d'effet significatif sur le taux d'énergie renouvelable dans ce modèle.\n",
-    "   - **x2 (Investissements en énergies renouvelables (% du PIB))** : 4.6608 (significatif)\n",
-    "     - Chaque augmentation de **1 % des investissements en énergies renouvelables** est associée à une augmentation moyenne de **4,66 %** du taux d'énergie renouvelable, avec une **p-value de 0.000** (très significatif).\n",
-    "   - **x3 (Accès à l'électricité (%))** : -21.0066 (significatif)\n",
-    "     - Chaque augmentation de 1 % de l'accès à l'électricité est associée à une **diminution moyenne de 21,01 %** du taux d'énergie renouvelable. Cette relation est très significative (\\(p = 0.000\\))."
+    "     - Il s'agit de l'ordonnée à l'origine du modèle de régression. Elle suggère que si toutes les variables prédictives étaient égales à zéro, le taux d'adoption des énergies renouvelables serait de 30,88 %.\n",
+    "   - **PIB par habitant** : -0.4482 \n",
+    "     - La valeur négative indique qu'un PIB par habitant plus élevé est associé à un taux des énergies renouvelables légèrement plus bas.\n",
+    "   - **Investissements en énergies renouvelables (% du PIB)** : 4.6608 \n",
+    "     - Chaque augmentation de **1 % des investissements en énergies renouvelables** est associée à une augmentation moyenne de **4,66 %** du taux d'énergie renouvelable.\n",
+    "   - **Accès à l'électricité (%)** : -21.0066 \n",
+    "     - Chaque augmentation de 1 % de l'accès à l'électricité est associée à une **diminution moyenne de 21,01 %** du taux d'énergie renouvelable. Cette relation est très significative."
    ]
   },
   {
@@ -685,7 +685,7 @@
    "id": "8a876dd9-d35e-4b3e-b117-c1bbdcfe14c4",
    "metadata": {},
    "source": [
-    "Le graphique montre une visualisation en 3D des données et du modèle de régression obtenu. Voici une interprétation détaillée :\n",
+    "Le graphique montre une visualisation en 3D des données et du modèle de régression obtenu :\n",
     "\n",
     "1. **Nuage de points (données réelles)** :\n",
     "   - Les triangles rouges représentent les valeurs réelles des données. \n",
@@ -694,14 +694,10 @@
     "2. **Plan de régression (modèle prédictif)** :\n",
     "   - Le plan bleu représente la prédiction du modèle de régression.\n",
     "   - Il montre comment le taux d'énergie renouvelable (axe Z) est influencé par le PIB par habitant et les investissements en énergies renouvelables.\n",
-    "   - Le modèle suppose une relation linéaire entre ces variables.\n",
     "\n",
     "3. **Analyse visuelle** :\n",
     "   - La majorité des données semblent concentrées dans une région où le PIB par habitant est faible et où les investissements en énergies renouvelables sont modérés.\n",
-    "   - Le plan de régression est relativement plat dans certaines zones, suggérant que l'effet des variables explicatives sur le taux d'énergie renouvelable pourrait être faible ou peu significatif dans ces régions.\n",
-    "\n",
-    "4. **Potentiel ajustement ou limites** :\n",
-    "   - Si le plan semble trop éloigné de certains points, cela peut indiquer que le modèle ne capture pas bien la complexité des données."
+    "   - Le plan de régression est relativement plat dans certaines zones, suggérant que l'effet des variables explicatives sur le taux d'énergie renouvelable pourrait être faible ou peu significatif dans ces régions."
    ]
   },
   {
@@ -755,7 +751,7 @@
    "id": "6c1ce3bf-bd28-4a4a-9e9e-9525f95b0f7b",
    "metadata": {},
    "source": [
-    "Statistique de Durbin-Watson : 2.051 : Cette valeur est proche de 2, ce qui suggère qu'il n'y a pas d'autocorrélation significative des résidus. Les résidus semblent être indépendants, ce qui est un bon signe pour la validité de modèle ."
+    "Statistique de Durbin-Watson : 2.051 : Cette valeur est proche de 2, ce qui suggère qu'il n'y a pas d'autocorrélation significative des résidus. Les résidus semblent être indépendants."
    ]
   },
   {
@@ -906,7 +902,7 @@
    "source": [
     "-Nous avons obtenu un coefficient de détermination \\( R^2 = 0.6169 \\), ce qui signifie que notre modèle explique environ **61.7%** de la variance totale de \\( y \\)(`Taux d'énergie renouvelable`). Cela indique que nos variables explicatives (\\( X \\)) ont un impact significatif sur la prédiction de notre variable cible, ce qui est plutôt encourageant. Un \\( R^2 \\) supérieur à 0.6 est souvent considéré comme une performance raisonnable.\n",
     "\n",
-    "-En revanche, lorsque nous ajustons ce coefficient pour tenir compte du nombre de variables explicatives et de la taille de l'échantillon, nous obtenons un \\( R^2 \\) ajusté de **0.5857**. Ce score ajusté est légèrement inférieur au \\( R^2 \\) brut, car il pénalise les modèles qui pourraient inclure des variables inutiles, c'est-à-dire celles qui n'améliorent pas de manière significative nos prédictions. "
+    "-En revanche, lorsque nous ajustons ce coefficient pour tenir compte du nombre de variables explicatives et de la taille de l'échantillon, nous obtenons un \\( R^2 \\) ajusté de **0.5857**. Ce score ajusté est légèrement inférieur au \\( R^2 \\) brut."
    ]
   },
   {
@@ -964,10 +960,10 @@
     "  - Cette p-value extrêmement faible indique que l'intercept est significativement différent de zéro. Cela signifie qu'il y a une valeur de base significative pour le taux d'énergie renouvelable lorsque toutes les variables explicatives sont nulles.  \n",
     "\n",
     "- **PIB par habitant (USD)** : p-value = **0.7376**  \n",
-    "  - Cette p-value est bien supérieure au seuil commun de 0.05. Cela indique que, pour ce modèle, le **PIB par habitant** n'a pas d'effet statistiquement significatif sur le taux d'énergie renouvelable. Vous pourriez envisager de retirer cette variable ou d'examiner sa pertinence sous un autre angle.  \n",
+    "  - Cette p-value est bien supérieure au seuil commun de 0.05. Cela indique que, pour ce modèle, le **PIB par habitant** n'a pas d'effet statistiquement significatif sur le taux d'énergie renouvelable.\n",
     "\n",
     "- **Investissements en énergies renouvelables (% du PIB)** : p-value = **2.26e-04**  \n",
-    "  - Cette p-value est bien inférieure à 0.05, ce qui montre que cette variable a un impact significatif sur le taux d'énergie renouvelable. Cela confirme que les investissements en énergies renouvelables influencent de manière importante la variable cible.  \n",
+    "  - Cette p-value est bien inférieure à 0.05, ce qui montre que cette variable a un impact significatif sur le taux d'énergie renouvelable. \n",
     "\n",
     "- **Accès à l'électricité (%)** : p-value = **2.65e-38**  \n",
     "  - Cette p-value est extrêmement faible, indiquant un effet très significatif de l'accès à l'électricité sur le taux d'énergie renouvelable. Cette variable est donc très pertinente pour expliquer la variabilité de la cible.  \n",
@@ -1029,10 +1025,10 @@
     "   - Représente les valeurs prédites par le modèle de régression.\n",
     "\n",
     "2. **Axe vertical (Résidus)** :\n",
-    "   - Les résidus sont la différence entre les valeurs observées et les valeurs prédites par le modèle (\\(y_{\\text{observé}} - y_{\\text{prévu}}\\)).\n",
+    "   - Les résidus sont la différence entre les valeurs observées et les valeurs prédites par le modèle.\n",
     "\n",
     "3. **Ligne horizontale rouge** :\n",
-    "   - Représente la ligne où les résidus sont nuls (\\(0\\)). Idéalement, les points devraient être dispersés de manière aléatoire autour de cette ligne.\n",
+    "   - Représente la ligne où les résidus sont nuls. \n",
     "\n",
     "---\n",
     "\n",
@@ -1123,7 +1119,7 @@
     "\n",
     "4. **Conclusion** :\n",
     "   - Les résidus montrent une distribution relativement proche d'une normale, mais il existe des signes de déviation, particulièrement dans les queues.\n",
-    "   - Pour valider davantage la normalité des résidus, il serait pertinent d'effectuer un **test statistique de normalité** (comme Shapiro-Wilk ou Kolmogorov-Smirnov) en complément de l'histogramme."
+    "   - Pour valider davantage la normalité des résidus, il serait pertinent d'effectuer un **test statistique de normalité** (comme Shapiro-Wilk) en complément de l'histogramme."
    ]
   },
   {
@@ -1166,15 +1162,14 @@
     "   - **Hypothèse alternative (H₁)** : Les résidus ne suivent pas une distribution normale.\n",
     "\n",
     "2. **Résultat obtenu** :\n",
-    "   - La **p-value** calculée est de `5.55e-06`, soit une valeur très petite.\n",
+    "   - La **p-value** calculée est de `5.55e-06`(valeur très petite).\n",
     "\n",
     "3. **Décision** :\n",
     "   - Si la p-value est **inférieure à 0.05** (niveau de signification standard), on **rejette l'hypothèse nulle**.\n",
     "   - Ici, la p-value est bien inférieure à 0.05, donc on rejette l'hypothèse selon laquelle les résidus suivent une distribution normale.\n",
     "\n",
     "4. **Conclusion** :\n",
-    "   - Les résidus **ne suivent pas une distribution normale**.\n",
-    "   - Cette déviation de la normalité peut indiquer des limitations dans le modèle utilisé ou dans les données elles-mêmes."
+    "   - Les résidus **ne suivent pas une distribution normale**."
    ]
   },
   {
@@ -1182,56 +1177,24 @@
    "id": "0462432f-f25e-4eee-80c9-05d5ad8cf978",
    "metadata": {},
    "source": [
-    "## Étape 9 : Réponse à la problématique"
+    "## Étape 9 : Conclusion"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7765398b-5027-4e77-a03b-af04b182600b",
+   "id": "91048230-6a41-4537-a10a-8069f0173df4",
    "metadata": {},
    "source": [
-    "**Problématique :**  \n",
-    "Quels sont les déterminants économiques et sociaux qui influencent la proportion d'énergies renouvelables dans le mix énergétique des pays, et dans quelle mesure ces facteurs interagissent-ils pour façonner la transition énergétique ?\n",
+    "1. **Investissements dans les énergies renouvelables** :  \n",
+    "   Les décideurs politiques devraient augmenter les investissements dans les énergies renouvelables, car ces derniers ont un effet positif et significatif sur leur adoption.\n",
     "\n",
-    "---\n",
+    "2. **Accès à l'électricité** :  \n",
+    "   L'effet négatif de l'accès à l'électricité peut être lié à la prédominance des sources fossiles dans les réseaux bien développés. Des politiques ciblées pour intégrer davantage de sources renouvelables dans les réseaux existants sont essentielles.\n",
     "\n",
-    "##### 1. **Capacité explicative du modèle**\n",
-    "Le coefficient de détermination ajusté (\\(R^2\\) ajusté) est de **0.586**, ce qui indique que **58.6% de la variabilité** de la proportion d'énergies renouvelables dans le mix énergétique est expliquée par les variables indépendantes utilisées dans le modèle (PIB par habitant, investissements en énergies renouvelables, accès à l'électricité). Cela suggère un modèle relativement performant.\n",
+    "3. **PIB par habitant** :  \n",
+    "   Bien que non significatif, cet indicateur peut être un proxy utile pour classer les pays et adapter les recommandations selon leur niveau de développement économique.\n",
     "\n",
-    "---\n",
-    "\n",
-    "##### 2. **Impact des variables explicatives**\n",
-    "Les coefficients et les \\(p\\)-values montrent que :\n",
-    "\n",
-    "- **PIB par habitant (USD)** :  \n",
-    "  - Coefficient : **-0.448**  \n",
-    "  - \\(p\\)-value : **0.737** (non significatif).  \n",
-    "  - **Interprétation :** Le PIB par habitant n’a pas d’impact significatif sur la proportion d’énergies renouvelables. Cela peut indiquer que le niveau de richesse économique d’un pays n’est pas directement lié à sa transition énergétique vers les énergies renouvelables.\n",
-    "\n",
-    "- **Investissements en énergies renouvelables (% du PIB)** :  \n",
-    "  - Coefficient : **4.661**  \n",
-    "  - \\(p\\)-value : **0.0002** (significatif).  \n",
-    "  - **Interprétation :** Une augmentation des investissements en énergies renouvelables est associée à une hausse de la proportion d’énergies renouvelables dans le mix énergétique. Cela confirme que les politiques de financement jouent un rôle crucial dans la transition énergétique.\n",
-    "\n",
-    "- **Accès à l’électricité (%)** :  \n",
-    "  - Coefficient : **-21.007**  \n",
-    "  - \\(p\\)-value : **2.65e-38** (très significatif).  \n",
-    "  - **Interprétation :** Une augmentation du pourcentage d'accès à l'électricité est associée à une **baisse de la proportion d'énergies renouvelables**. Ce résultat peut s'expliquer par le fait que les infrastructures électriques existantes dans certains pays reposent fortement sur des énergies fossiles, réduisant la part des renouvelables.\n",
-    "\n",
-    "\n",
-    "\n",
-    "---\n",
-    "\n",
-    "##### 4. **Synthèse des résultats**\n",
-    "- **Les déterminants significatifs** de la proportion d'énergies renouvelables sont :\n",
-    "  - Les investissements en énergies renouvelables (**impact positif**).\n",
-    "  - L'accès à l'électricité (**impact négatif**).\n",
-    "\n",
-    "- **Recommandations :**\n",
-    "  1. **Augmenter les investissements** dans les énergies renouvelables, car ils sont un levier direct pour encourager leur adoption.\n",
-    "  2. **Moderniser les infrastructures énergétiques** dans les pays où l'accès à l'électricité est élevé mais repose sur des énergies fossiles. Cela pourrait inverser l'effet négatif de cette variable.\n",
-    "\n",
-    "En conclusion, la transition énergétique dépend fortement des priorités d’investissement et des infrastructures existantes. Les résultats de ce modèle fournissent une base solide pour formuler des politiques favorisant une adoption accrue des énergies renouvelables."
+    "Le modèle met en évidence l'importance des investissements dans les énergies renouvelables tout en soulignant des défis liés à la dépendance des infrastructures énergétiques actuelles. Ces résultats suggèrent que les pays doivent prioriser les investissements et réformer les infrastructures pour faciliter une transition énergétique efficace."
    ]
   }
  ],
@@ -1251,7 +1214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
