--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -546,7 +546,7 @@
    "id": "2701f00b-6c9f-4dd1-9709-f292251f52d8",
    "metadata": {},
    "source": [
-    " Étudier les relations qualitatives entre les types d’énergies utilisées (renouvelables vs non-renouvelables) et les classifications des pays (revenu faible, intermédiaire, élevé)."
+    " Étudier les relations entre la classification de la transition énergétique (Avancée, débutante, intermédiaire) et les classifications des pays (revenu faible, intermédiaire, élevé)."
    ]
   },
   {
