minor fixes part 3

--- a/Rapport.ipynb
+++ b/Rapport.ipynb
@@ -83,6 +83,83 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56360db0-7617-4fb1-9384-c820940e4275",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Définir les indicateurs \n",
+    "indicators = {\n",
+    "    \"EG.FEC.RNEW.ZS\": \"Taux d'énergie renouvelable\",\n",
+    "    \"EG.ELC.RNWX.ZS\": \"Investissements en énergies renouvelables (% du PIB)\",\n",
+    "    \"NY.GDP.PCAP.CD\": \"PIB par habitant (USD)\",\n",
+    "    \"SE.SEC.NENR\": \"Taux de scolarisation secondaire (%)\",\n",
+    "    \"EG.ELC.ACCS.ZS\": \"Accès à l'électricité (%)\"\n",
+    "}\n",
+    "\n",
+    "\n",
+    "# Définir la période de 2010 à 2023\n",
+    "start_year = 2010\n",
+    "end_year = 2023\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26692f4d-1934-46a7-9fbe-0d2db77a974d",
+   "metadata": {},
+   "source": [
+    "#### Ce code récupère les données des indicateurs  via l'API de la **Banque mondiale** pour la période **2010-2023**. Il combine ces données dans un **DataFrame unique** en effectuant les étapes suivantes :\n",
+    "\n",
+    "1. Envoi d'une requête pour chaque indicateur.  \n",
+    "2. Normalisation des données JSON en un tableau structuré.  \n",
+    "3. Sélection et renommage des colonnes essentielles (Pays, Année, Valeur).  \n",
+    "4. Fusion progressive des données sur les colonnes \"Country\" et \"Year\".  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7b5881d-94a2-43e6-b9bb-1effcf004c74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DataFrame vide pour combiner les données\n",
+    "df_combined = pd.DataFrame()\n",
+    "\n",
+    "# Boucle pour récupérer chaque indicateur et ajouter les données dans le dataframe\n",
+    "for indicator, description in indicators.items():\n",
+    "    \n",
+    "    url = f\"http://api.worldbank.org/v2/country/all/indicator/{indicator}?format=json&date={start_year}:{end_year}&per_page=5000\"\n",
+    "    response = requests.get(url)\n",
+    "    \n",
+    "    if response.status_code == 200:\n",
+    "        data = response.json()\n",
+    "        if data and len(data) > 1:\n",
+    "            results = data[1]\n",
+    "            \n",
+    "            # Normaliser la réponse JSON pour en faire un DataFrame\n",
+    "            df = pd.json_normalize(results)\n",
+    "            \n",
+    "            # Garder uniquement les colonnes nécessaires : pays, valeur de l'indicateur et année\n",
+    "            df = df[[\"country.value\", \"value\", \"date\"]]\n",
+    "            \n",
+    "            # Renommer les colonnes\n",
+    "            df.columns = [\"Country\", description, \"Year\"]\n",
+    "            \n",
+    "            # Si df_combined est vide, initialisez-le avec le premier indicateur\n",
+    "            if df_combined.empty:\n",
+    "                df_combined = df\n",
+    "            else:\n",
+    "                # Fusionner sur les colonnes \"Country\" et \"Year\"\n",
+    "                df_combined = pd.merge(df_combined, df, on=[\"Country\", \"Year\"], how=\"outer\")\n",
+    "        else:\n",
+    "            print(f\"Aucune donnée trouvée pour l'indicateur {indicator}.\")\n",
+    "    else:\n",
+    "        print(f\"Erreur lors de la requête pour l'indicateur {indicator} : {response.status_code}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "400c359a-aee8-4206-bed1-4758d94ff0e2",
    "metadata": {},
@@ -5922,7 +5999,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
